--- a/dot_config/fontconfig/fonts.conf
+++ b/dot_config/fontconfig/fonts.conf
@@ -20,7 +20,7 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>Noto Sans</string>
-   <string>Noto Sans Thai Looped</string>
+   <string>Noto Sans Thai</string>
    <string>Noto Sans CJK JP</string>
   </edit>
  </match>
@@ -30,7 +30,7 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>Noto Sans</string>
-   <string>Noto Sans Thai Looped</string>
+   <string>Noto Sans Thai</string>
    <string>Noto Sans CJK JP</string>
   </edit>
  </match>
@@ -40,28 +40,28 @@
   </test>
   <edit binding="strong" mode="prepend" name="family">
    <string>CaskaydiaCove Nerd Font</string>
-   <string>Noto Sans Thai Looped</string>
+   <string>Noto Sans Thai</string>
   </edit>
  </match>
  <alias>
   <family>Arial</family>
   <prefer>
    <family>Noto Sans</family>
-   <family>Noto Sans Thai Looped</family>
+   <family>Noto Sans Thai</family>
   </prefer>
  </alias>
  <alias>
   <family>Helvetica</family>
   <prefer>
   <family>Noto Sans</family>
-   <family>Noto Sans Thai Looped</family>
+   <family>Noto Sans Thai</family>
   </prefer>
  </alias>
  <alias>
   <family>Tahoma</family>
   <prefer>
   <family>Noto Sans</family>
-   <family>Noto Sans Thai Looped</family>
+   <family>Noto Sans Thai</family>
   </prefer>
  </alias>
  <match target="font">
